--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
         - env: COMPILER=clang++-3.5 PKGS="clang-3.5 libc++-dev"
         - env: COMPILER=clang++-3.6 PKGS="clang-3.6 libc++-dev"
         - env: COMPILER=clang++-3.7 PKGS="clang-3.7 libc++-dev"
-        - env: COMPILER=g++         PKGS="doxygen"              BUILD_DOC=true
+        - env: COMPILER=clang++     PKGS="doxygen"              BUILD_DOC=true
 
 before_install:
     - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
