--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,7 @@ if(METAL_ENABLE_EXTRA_WARNINGS)
         list(APPEND METAL_EXTRA_COMPILE_FLAGS
             -Wno-c++98-compat
             -Wno-c++98-compat-pedantic
+            -Wno-documentation
             -Wno-documentation-unknown-command
         )
     endif()
