renaming the concept of a Numerical Value to Number

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -234,8 +234,8 @@ ALIASES               +=nullable="\ref concept_nullable_value"
 ALIASES               +=nullables="\ref concept_nullable_value \"Nullable Values\""
 ALIASES               +=strict="\ref concept_strict_value"
 ALIASES               +=stricts="\ref concept_strict_value \"Strict Values\""
-ALIASES               +=numerical="\ref concept_numerical_value"
-ALIASES               +=numericals="\ref concept_numerical_value \"Numerical Values\""
+ALIASES               +=number="\ref concept_number"
+ALIASES               +=numbers="\ref concept_number \"Numbers\""
 ALIASES               +=expression="\ref concept_expression"
 ALIASES               +=expressions="\ref concept_expression \"Expressions\""
 ALIASES               +=function="\ref concept_function"
