renaming nullable to optional, nil to nothing, identity to just and introducing maybe and is_just

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -230,10 +230,8 @@ TAB_SIZE               = 4
 
 ALIASES               +=value="\ref concept_value"
 ALIASES               +=values="\ref concept_value \"Values\""
-ALIASES               +=nullable="\ref concept_nullable_value"
-ALIASES               +=nullables="\ref concept_nullable_value \"Nullable Values\""
-ALIASES               +=strict="\ref concept_strict_value"
-ALIASES               +=stricts="\ref concept_strict_value \"Strict Values\""
+ALIASES               +=optional="\ref concept_optional"
+ALIASES               +=optionals="\ref concept_optional \"Optionals\""
 ALIASES               +=number="\ref concept_number"
 ALIASES               +=numbers="\ref concept_number \"Numbers\""
 ALIASES               +=expression="\ref concept_expression"
@@ -241,8 +239,8 @@ ALIASES               +=expressions="\ref concept_expression \"Expressions\""
 ALIASES               +=function="\ref concept_function"
 ALIASES               +=functions="\ref concept_function \"Functions\""
 
-ALIASES               +=nil="\ref is_nil \"nil\""
-ALIASES               +=strict="\ref is_strict \"strict\""
+ALIASES               +=nothing="\ref is_nothing \"nothing\""
+ALIASES               +=just="\ref is_just \"just\""
 ALIASES               +=evaluable="\ref is_evaluable \"evaluable\""
 
 # This tag can be used to specify a number of word-keyword mappings (TCL only).
