updating CI scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,56 +4,92 @@
 
 language: cpp
 os: linux
-sudo: required
-
-env:
-  global:
-    secure: I+/0uZHtoQoyh/NzNru20y7YBqkazbXj/ciTRxoX5oq4YCZoFh07BJxghWeQNX/OqAVpKb0pNbkyMJxKe628LeHlI4ftZCZl2ZJmcLONR9KOUI+8eJ/sb5+TgQIaG1uBwUFx89eXKbbZWWdc0CQhBnSEJdU8sl6lY+ZsbU9PtKk=
+sudo: false
 
 matrix:
     include:
-        - env: COMPILER=g++-4.7     PKGS=g++-4.7
-        - env: COMPILER=g++-4.8     PKGS=g++-4.8
-        - env: COMPILER=g++-4.9     PKGS=g++-4.9
-        - env: COMPILER=g++-5       PKGS=g++-5
-        - env: COMPILER=clang++-3.1 PKGS="clang-3.1 libc++-dev"
-        - env: COMPILER=clang++-3.2 PKGS="clang-3.2 libc++-dev"
-        - env: COMPILER=clang++-3.3 PKGS="clang-3.3 libc++-dev"
-        - env: COMPILER=clang++-3.4 PKGS="clang-3.4 libc++-dev"
-        - env: COMPILER=clang++-3.5 PKGS="clang-3.5 libc++-dev"
-        - env: COMPILER=clang++-3.6 PKGS="clang-3.6 libc++-dev"
-        - env: COMPILER=clang++-3.7 PKGS="clang-3.7 libc++-dev"
-        - env: BUILD_DOC=true       PKGS=""
+    - env: COMPILER=g++-4.7
+        apt:
+            packages:
+            - g++-4.7
+            sources:
+            - ubuntu-toolchain-r-test
+    - env: COMPILER=g++-4.8
+        apt:
+            packages:
+            - g++-4.8
+            sources:
+            - ubuntu-toolchain-r-test
+    - env: COMPILER=g++-4.9
+        apt:
+            packages:
+            - g++-4.9
+            sources:
+            - ubuntu-toolchain-r-test
+    - env: COMPILER=g++-5
+        apt:
+            packages:
+            - g++-5
+            sources:
+            - ubuntu-toolchain-r-test
+    - env: COMPILER=clang++-3.5
+        apt:
+            packages:
+            - clang-3.5
+            - libc++-dev
+            sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.5
+    - env: COMPILER=clang++-3.6
+        apt:
+            packages:
+            - clang-3.6
+            - libc++-dev
+            sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.6
+    - env: COMPILER=clang++-3.7
+        apt:
+            packages:
+            - clang-3.7
+            - libc++-dev
+            sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.7
+    - env: COMPILER=clang++-3.8
+        apt:
+            packages:
+            - clang-3.8
+            - libc++-dev
+            sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise
 
-before_install:
-    - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
-    - sudo add-apt-repository --yes ppa:h-rayflood/llvm
-    - sudo add-apt-repository --yes 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.5 main'
-    - sudo add-apt-repository --yes 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.6 main'
-    - sudo add-apt-repository --yes 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise main'
-    - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
-    - sudo apt-get -qq update
+env:
+    global:
+        secure: I+/0uZHtoQoyh/NzNru20y7YBqkazbXj/ciTRxoX5oq4YCZoFh07BJxghWeQNX/OqAVpKb0pNbkyMJxKe628LeHlI4ftZCZl2ZJmcLONR9KOUI+8eJ/sb5+TgQIaG1uBwUFx89eXKbbZWWdc0CQhBnSEJdU8sl6lY+ZsbU9PtKk=
+
+    matrix:
+    - env: BUILD_DOC=true
 
 install:
-    - if [[ -n "${PKGS}" ]]; then sudo apt-get -qq install ${PKGS}; fi
+- DEPS_PATH="${TRAVIS_BUILD_DIR}/deps"
+- mkdir "${DEPS_PATH}"
 
-    - DEPS_PATH="${TRAVIS_BUILD_DIR}/deps"
-    - mkdir "${DEPS_PATH}"
-
-    - DOXYGEN_URL="http://ftp.stack.nl/pub/users/dimitri/doxygen-1.8.10.linux.bin.tar.gz"
-    - if [[ "${BUILD_DOC}" == "true" ]]; then mkdir "${DEPS_PATH}/doxygen" && travis_retry wget --quiet -O - ${DOXYGEN_URL} | tar --strip-components=1 -xz -C "${DEPS_PATH}/doxygen"; fi
-    - if [[ "${BUILD_DOC}" == "true" ]]; then export PATH=${DEPS_PATH}/doxygen/bin:${PATH}; fi
+- DOXYGEN_URL="http://ftp.stack.nl/pub/users/dimitri/doxygen-1.8.10.linux.bin.tar.gz"
+- if [[ "${BUILD_DOC}" == "true" ]]; then mkdir "${DEPS_PATH}/doxygen" && travis_retry wget --quiet -O - ${DOXYGEN_URL} | tar --strip-components=1 -xz -C "${DEPS_PATH}/doxygen"; fi
+- if [[ "${BUILD_DOC}" == "true" ]]; then export PATH=${DEPS_PATH}/doxygen/bin:${PATH}; fi
 
 before_script:
-    - git config --global user.name "Travis Bot"
+- git config --global user.name "Travis Bot"
 
-    - mkdir "${TRAVIS_BUILD_DIR}/build"
-    - cd "${TRAVIS_BUILD_DIR}/build"
+- mkdir "${TRAVIS_BUILD_DIR}/build"
+- cd "${TRAVIS_BUILD_DIR}/build"
 
-    - if [[ -z "${COMPILER}" ]]; then COMPILER=g++; fi
-    - cmake "${TRAVIS_BUILD_DIR}" -DCMAKE_CXX_COMPILER=/usr/bin/${COMPILER}
+- if [[ -z "${COMPILER}" ]]; then COMPILER=g++; fi
+- cmake "${TRAVIS_BUILD_DIR}" -DCMAKE_CXX_COMPILER=/usr/bin/${COMPILER}
 
 script:
-    - if [[ "${BUILD_DOC}" != "true" ]]; then time make metal.test && ctest --output-on-failure; fi
-    - if [[ "${BUILD_DOC}" == "true" && "${TRAVIS_PULL_REQUEST}" == "false" && "${TRAVIS_BRANCH}" == "master" ]]; then make metal.doc.update &> /dev/null; fi
-    - if [[ "${BUILD_DOC}" == "true" && ("${TRAVIS_PULL_REQUEST}" == "true" || "${TRAVIS_BRANCH}" != "master") ]]; then time make metal.doc; fi
+- if [[ "${BUILD_DOC}" != "true" ]]; then time make metal.test && ctest --output-on-failure; fi
+- if [[ "${BUILD_DOC}" == "true" && "${TRAVIS_PULL_REQUEST}" == "false" && "${TRAVIS_BRANCH}" == "master" ]]; then make metal.doc.update &> /dev/null; fi
+- if [[ "${BUILD_DOC}" == "true" && ("${TRAVIS_PULL_REQUEST}" == "true" || "${TRAVIS_BRANCH}" != "master") ]]; then time make metal.doc; fi
